// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Closes menu when click outside 1`] = `
<div>
  <DropDown
    align="left"
    direction="down"
    showOnHover={false}
  >
    <div
      className="container down left"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropDownSelector
        isActive={false}
      >
        <div
          className="selectedItem false"
        >
          <DropDownItem
            icon={
              <span
                aria-label="de"
                role="img"
              >
                🇩🇪
              </span>
            }
            isActive={true}
          >
            <div
              className="item active hasIcon"
            >
              <a
                href="/de"
              >
                Deutschland
              </a>
              <span
                className="icon"
              >
                <span
                  aria-label="de"
                  role="img"
                >
                  🇩🇪
                </span>
              </span>
            </div>
          </DropDownItem>
        </div>
      </DropDownSelector>
      <DropDownItems>
        <div
          className="items"
        >
          <DropDownItem
            icon={
              <span
                aria-label="ch"
                role="img"
              >
                🇨🇭
              </span>
            }
            isActive={false}
          >
            <div
              className="item false hasIcon"
            >
              <a
                href="/ch"
              >
                Schweiz
              </a>
              <span
                className="icon"
              >
                <span
                  aria-label="ch"
                  role="img"
                >
                  🇨🇭
                </span>
              </span>
            </div>
          </DropDownItem>
        </div>
      </DropDownItems>
    </div>
  </DropDown>
  <button
    type="button"
  >
    Click outside
  </button>
</div>
`;

exports[`Closes menu when not hovered 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  showOnHover={true}
  title="Österreich"
>
  <ul
    className="container down "
  >
    <button
      aria-expanded={false}
      aria-haspopup="listbox"
      className="toggleButton selectedItem"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Österreich
    </button>
  </ul>
</DropDown>
`;

exports[`Does not open menu when hovered while showOnHover is enabled 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  showOnHover={false}
  title="Österreich"
>
  <ul
    className="container down "
  >
    <button
      aria-expanded={false}
      aria-haspopup="listbox"
      className="toggleButton selectedItem"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Österreich
    </button>
  </ul>
</DropDown>
`;

exports[`Renders DropDown without crashing 1`] = `
<ul
  className="container down "
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="toggleButton selectedItem"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    Products
  </button>
</ul>
`;

exports[`Renders correctly when no icon is provided 1`] = `
<ul
  className="container down "
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="toggleButton selectedItem"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    Österreich
  </button>
</ul>
`;

exports[`Renders menu when button is clicked 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  showOnHover={false}
  title={
    <span>
      United States 
      <span
        aria-label="us"
        role="img"
      >
        🇺🇸
      </span>
    </span>
  }
>
  <ul
    className="container down "
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      className="toggleButton selectedItem"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span>
        United States 
        <span
          aria-label="us"
          role="img"
        >
          🇺🇸
        </span>
      </span>
    </button>
    <div
      aria-labelledby="dropdown"
      className="itemsList"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <DropDownItem
        icon={
          <span
            aria-label="at"
            role="img"
          >
            🇦🇹
          </span>
        }
        isActive={false}
      >
        <li
          className="item  hasIcon"
        >
          <a
            href="/"
          >
            Österreich
          </a>
          <span
            className="icon"
          >
            <span
              aria-label="at"
              role="img"
            >
              🇦🇹
            </span>
          </span>
        </li>
      </DropDownItem>
    </div>
  </ul>
</DropDown>
`;

exports[`Renders menu when hovered 1`] = `
<DropDown
  direction="down"
  pullRight={false}
  showOnHover={true}
  title="Österreich"
>
  <ul
    className="container down "
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      className="toggleButton selectedItem"
      id="dropdown"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Österreich
    </button>
    <div
      aria-labelledby="dropdown"
      className="itemsList"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <DropDownItem
        icon={false}
        isActive={false}
      >
        <li
          className="item  "
        >
          <a
            href="/ch"
          >
            Schweiz
          </a>
        </li>
      </DropDownItem>
    </div>
  </ul>
</DropDown>
`;

exports[`Renders with direction up 1`] = `
<ul
  className="container up "
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="toggleButton selectedItem"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span>
      Österreich 
      <span
        aria-label="at"
        role="img"
      >
        🇦🇹
      </span>
    </span>
  </button>
</ul>
`;

exports[`Renders with pullRight and showOnHover false 1`] = `
<ul
  className="container down pullRight"
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    className="toggleButton selectedItem"
    id="dropdown"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <span>
      Österreich 
      <span
        aria-label="at"
        role="img"
      >
        🇦🇹
      </span>
    </span>
  </button>
</ul>
`;

exports[`Unmount triggers lifecycle method 1`] = `""`;
